--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.24.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "newrelic": "^8.1.0",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
     "pg-promise": "^10.11.0"
@@ -31,27 +32,23 @@
   "eslintConfig": {
     "extends": "airbnb-base",
     "env": {
-        "es6": true,
-        "browser": true
+      "es6": true,
+      "browser": true
     },
     "rules": {
-        "brace-style": [
-            "error",
-            "stroustrup"
-        ],
-        "comma-dangle": [
-            "error",
-            "never"
-        ],
-        "no-unused-vars": [
-            "warn"
-        ],
-        "no-var": [
-            "off"
-        ],
-        "one-var": [
-            "off"
-        ]
+      "comma-dangle": [
+        "error",
+        "never"
+      ],
+      "no-unused-vars": [
+        "warn"
+      ],
+      "no-var": [
+        "off"
+      ],
+      "one-var": [
+        "off"
+      ]
     }
-}
+  }
 }
